--- a/index.html
+++ b/index.html
@@ -424,6 +424,19 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
           <p>This section has excerpts and snapshots of recommendations, testimonials and awards from people I have interacted with in my academic and professional journey.</p>
         </div>
         <div class="owl-carousel testimonials-carousel">
+		
+		<div class="testimonial-item">
+              <p>
+                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
+                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2018.Pdf"> Mr. Shetu proved that he is quick to learn new tasks. Within a short time, he was very
+successful in applying the acquired professional knowledge to his work. Mr. Shetu has shown a high degree of dedication at all times. When accomplishing his tasks, he always gave evidence of high intensity
+and energy. He performed his tasks with the utmost care and exceeding efficiency. We were always very satisfied with the results of his work.</a>
+                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
+              </p>
+              <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
+              <h3><a href="https://www.audiolabs-erlangen.de/fau/professor/habets">Prof. Dr. ir. Emanuël Habets</a></h3>
+              <h4>Associate Professor for Perception-based Spatial Audio Signal Processing</h4>
+            </div>
 
             
 			<div class="testimonial-item">
@@ -433,41 +446,57 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-              <h3>Prof.Dr.Dr. Ulrich Hoppe</h3>
+              <h3><a href="https://www.hno-klinik.uk-erlangen.de/kontakt/visitenkarte/vk/ulrichhoppe/16882/">Prof.Dr.Dr. Ulrich Hoppe</a></h3>
               <h4>Department head, Universitätsklinikum Erlangen</h4>
             </div>
 			
+
+			
 			<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2018.Pdf">for enabling the creation of Pricing toolkit with the vision to facilitate hassle-free consumption and stakeholder collaboration and for independently running this prohect with minimal oversight.</a>
+                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/Spot%20Award%202018_2.Pdf">Mr. Shetu has varied expertise in MATLAB and Python, which he successfully applied in practice.
+		      His work was characterized by high reliability and displayed a high level of responsibility</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-              <h3>Raghul Muthusamy</h3>
-              <h4>Apprentice Leader</h4>
+              <h3><a href="https://www.audiolabs-erlangen.de/fau/professor/mueller">Prof. Dr. Meinard Muller</a></h3>
+              <h4>Professor for Semantic Audio Signal Processing</h4>
             </div>
 			
 			<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/Spot%20Award%202018_2.Pdf">for helping the sales team at Mu Sigma for a new client acquisition by delivering good quality work and high accountability on analytical PoCs and prototypes.</a>
+                His quality of relaizing and analyzing a topic is impressive. I believe he has a very good potential to pursue his career to doctorate level.
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-              <h3>Anila Rao</h3>
-              <h4>Apprentice Leader- Mu Sigma Leadership (Business Development &amp; Commercial Effectiveness)</h4>
-            </div>
-			
-			<div class="testimonial-item">
+              <h3><a href="http://www.nitjsr.ac.in/academics/departments/profile.php?user_id=EE04">Prof. Rabindra Nath Mahanty</a></h3>
+              <h4>Porfessor and HOD, EEE, NIT, Jamshedpur.</h4>
+			</div>
+		
+		<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                I would like to put you at top 10% of your batch of approximately 250 UG students.
+                He stood out among his peers for his egarness to engage in the process of learning and discovery.
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-              <h3><a href="https://manipal.edu/mit/department-faculty/faculty-list/padmashree-tk.html">Dr. T K Padma Shri</a></h3>
-              <h4>Associate Professor - Senior Scale</h4>
+              <h3><a href="http://www.nitjsr.ac.in/academics/departments/profile.php?user_id=EE07">Prof. Dr. Niranjan Kumar</a></h3>
+              <h4>Professor, EEE, NIT, Jamshedpur.</h4>
+			</div>
+		
+		<div class="testimonial-item">
+              <p>
+                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
+                Shetu has distinguished himself as one of the best students in the class and laboratory as well.
+He brings together an engineer’s analytical approach, a keen grasp of basic facts coupled with
+mathematical knowledge, which he applies efficiently to problem solving.
+                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
+              </p>
+              <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
+              <h3><a href="http://www.nitjsr.ac.in/academics/departments/profile.php?user_id=EE18">Dr. Madhu Singh</a></h3>
+              <h4>Associate Professor, EEE, NIT, Jamshedpur.</h4>
 			</div>
 
 
