--- a/index.html
+++ b/index.html
@@ -428,9 +428,8 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
 		<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2018.Pdf"> Mr. Shetu proved that he is quick to learn new tasks. Within a short time, he was very
-successful in applying the acquired professional knowledge to his work. Mr. Shetu has shown a high degree of dedication at all times. When accomplishing his tasks, he always gave evidence of high intensity
-and energy. He performed his tasks with the utmost care and exceeding efficiency. We were always very satisfied with the results of his work.</a>
+                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2018.Pdf"> He is quick to learn new tasks. Within a short time, he was very
+successful in applying the acquired professional knowledge to his work with high degree of dedication at all times We were always very satisfied with the results of his work.</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
@@ -467,7 +466,7 @@ and energy. He performed his tasks with the utmost care and exceeding efficiency
 			<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                His quality of relaizing and analyzing a topic is impressive. I believe he has a very good potential to pursue his career to doctorate level.
+                <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/Spot%20Award%202018_2.Pdf">His quality of relaizing and analyzing a topic is impressive. I believe he has a very good potential to pursue his career to doctorate level.</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
@@ -478,7 +477,7 @@ and energy. He performed his tasks with the utmost care and exceeding efficiency
 		<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                He stood out among his peers for his egarness to engage in the process of learning and discovery.
+                <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/Spot%20Award%202018_2.Pdf">He stood out among his peers for his egarness to engage in the process of learning and discovery.</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
@@ -489,8 +488,7 @@ and energy. He performed his tasks with the utmost care and exceeding efficiency
 		<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                Shetu has distinguished himself as one of the best students in the class and laboratory as well.
-He brings together an engineer’s analytical approach, a keen grasp of basic facts coupled with
+                He distinguished himself as one of the best students in the class and laboratory, with a keen grasp of basic facts coupled with
 mathematical knowledge, which he applies efficiently to problem solving.
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
