--- a/index.html
+++ b/index.html
@@ -213,24 +213,24 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
 					<ul>
 						<li>Experience
 							<ul>
-							  <li><a href="#">Classification</a></li>
-							  <li><a href="#">Regression</a></li>
-							  <li><a href="#">Clustering</a></li>
-							  <li><a href="#">Associative Learning</a></li>	
+							  <li><a href="#projects">Classification</a></li>
+							  <li><a href="#projects">Regression</a></li>
+							  <li><a href="#projects">Clustering</a></li>
+							  <li><a href="#projects">Generative Models</a></li>	
 							</ul>
 						</li>
-						<li>Articles
+						<li>Framework
 							<ul>
-						      <li><a href="https://towardsdatascience.com/data-preparation-and-preprocessing-is-just-as-important-creating-the-actual-model-in-data-sciences-2c0562b65f62">Data Preparation and Preprocessing is just as important creating the actual Model in Data Sciences</a></li>
-						      <li><a href="https://medium.com/@srishtisaha/kickstarter-projects-prediction-of-state-steps-for-a-beginner-analysis-f4630a50b7fe">Will your Kickstarter Project be successful? | A simple analysis to help you predict better!!!</a></li>
+						      <li><a href="#projects">Keras</a></li>
+						      <li><a href="#projects">TensorFlow</a></li>
+						      <li><a href="#projects">PyTorch</a></li>
 							</ul>
 						</li>
 						<li>Courses
 						    <ul>
-							  <li><a href="https://github.com/srishtis/Machine-Learning-Courses/tree/master/Udemy%20Machine%20Learning%20A-Z%20Hands%20On%20Python%20-%20R">Udemy: Machine Learning A-Z™: Hands-On Python and R In Data Science </a></li>
-							  <li><a href="https://github.com/srishtis/Machine-Learning-Courses/tree/master/Machine-Learning-Andrew-NG-coursera">Coursera: Machine Learing by Andrew Ng</a></li>
-							  <li><a href="https://github.com/srishtis/Machine-Learning-Courses/tree/master/Regression%20Models">Coursera: Regression Models</a></li>
-							  <li><a href="https://www.edx.org/course/machine-learning-columbiax-csmm-102x-0">edX: Machine Learning	by ColumbiaX (audited the course)</a></li>
+							  <li><a href="https://machinelearning.tf.fau.de/lectures.html"> Machine learning in signal processing </a></li>
+							  <li><a href="https://github.com/srishtis/Machine-Learning-Courses/tree/master/Machine-Learning-Andrew-NG-coursera">Seminar on overfitting and regularization for machine learning in wirless communication</a></li>
+
 							</ul>
 						</li>
 					</ul>	
@@ -239,38 +239,7 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
             </div>
           </div>
 
-          <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
-            <div class="portfolio-item wow fadeInUp">
-              <a class="portfolio-popup">
-                <img src="img/portfolio/2.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Mathematics</h2></div>
-				  <p class="description"> </p>
-					<ul>
-						<li>Articles
-							<ul>
-							  <li><a href="https://towardsdatascience.com/let-us-understand-the-correlation-matrix-and-covariance-matrix-d42e6b643c22">Demystifying the concept and application of covariance and correlation matrix </a></li>
-							  <li><a href="https://medium.com/@srishtisaha/understanding-the-log-loss-function-of-xgboost-8842e99d975d">Understanding the Log Loss function in XGBoost</a></li>
-							</ul>
-						</li>
-						<li>Courses
-						    <ul>
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Maxima%20and%20Minima%20Concepts-%20Applications%20and%20Derivatives">Udemy: Maxima and Minima concepts : Applications of Derivatives </a></li>
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Particle%20Swarm%20Optimization%20in%20MATLAB">Udemy: Particle Swarm Optimization in MATLAB </a></li>	
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/blob/master/Coursera%20ALN5Z8FTFZPP.pdf">Coursera Specialization: Mathematics for Machine Learning</a>- <a href="https://github.com/srishtis/Mathematics-courses/tree/master/Mathematics%20for%20Machine%20Learning-%20Linear%20Algebra">Linear Algebra </a>, <a href="https://github.com/srishtis/Mathematics-courses/tree/master/Mathematics%20for%20Machine%20Learning-%20Multivariate%20Calculus">Multivariate Calculus</a> and <a href="https://github.com/srishtis/Mathematics-courses/tree/master/Mathematics%20for%20Machine%20Learning-%20PCA">PCA</a></li>
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/blob/master/Advanced%20Linear%20Models%20for%20Data%20Science%201-%20Least%20Squares/Coursera%20SPGWHQ936FED.pdf">Coursera: Advanced Linear Models for Data Science 1: Least Squares</a></li>
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/blob/master/Advanced%20Linear%20Models%20for%20Data%20Science%202-%20Statistical%20Linear%20Models/Coursera%20GW6YNXAWXSUT.pdf">Coursera: Advanced Linear Models for Data Science 2: Statistical Linear Models</a></li>	
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Combinatorics%20and%20Probability">Coursera: Combinatorics and Probability</a></li>
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Data%20Science%20Math%20Skills">Coursera: Data Science Math Skills</a></li>
-							  <li><a href="https://github.com/srishtis/Mathematics-courses/tree/master/Coursera-%20introduction%20to%20graph%20theory">Coursera: Introduction to Graph Theory</a></li>	
-							  <li><a href="https://www.edx.org/course/ap-calculus-challenging-concepts-from-calculus-ab-calculus-bc">edX: AP® Calculus: Challenging Concepts from Calculus AB &amp; Calculus BC (audited the course)</a></li>
-							</ul>
-						</li>
-					</ul>	
-                </div>
-              </a>
-            </div>
-          </div>
+          
 
           <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
             <div class="portfolio-item wow fadeInUp">
@@ -282,22 +251,28 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
 					<ul>
 						<li>Experience
 							<ul>
-							  <li><a href="https://in.mathworks.com/matlabcentral/cody/players/4892831">MATLAB Cody Rank: current rank (10/11/2018)- 35 out of 46,123 active players </a></li>  
-							  <li>Work experience in Python(advanced) R(intermediate) and SAS(basics)</li>	
+							  <li><a href="#projects"> Python </a></li>  
+							  <li><a href="#projects"> Matlab </a></li>
+							  <li><a href="#projects"> Java</a></li>
+							  <li><a href="#projects"> C</a></li>
+							  <li><a href="#projects"> HTML</a></li>
+							  <li><a href="#projects"> CSound</a></li>
 							</ul>
 						</li>
-						<li>Articles
+						<li>Framework
 							<ul>
-						      <li><a href="https://medium.com/@srishtisaha/matlab-my-learning-journey-and-some-tips-3c953b7e393a">MATLAB: My learning journey and some tips!!!</a></li>
-							  <li><a href="https://medium.com/@srishtisaha/can-we-use-sql-for-advanced-analytical-techniques-94fd40f92960">Can we use SQL for advanced analytical techniques?</a></li>
+						      <li><a href="#projects">Docker</a></li>
+						      <li><a href="#projects">Kubernetes</a></li>
+						      <li><a href="#projects">Github</a></li>
+						      <li><a href="#projects">Bash</a></li>
+						
 						    </ul>
 						</li>
-						<li>Courses
+						<li>Operating System
 						    <ul>
-							  <li><a href="https://github.com/srishtis/R-and-Python-Programming-coursework-and-artefacts/tree/master/Udemy-R%20Basics-%20R%20Programming%20Language%20Introduction">Udemy: R Basics - R Programming Language Introduction </a></li>
-							  <li><a href="https://github.com/srishtis/R-and-Python-Programming-coursework-and-artefacts/tree/master/Coursera-%20R%20Programming">Coursera: R Programming </a></li>	
-							  <li><a href="https://github.com/srishtis/MATLAB-Practice-and-tests/tree/master/Coursera">Coursera: Introduction to Programming with MATLAB</a></li>
-							  <li><a href="https://github.com/srishtis/R-and-Python-Programming-coursework-and-artefacts/tree/master/Udemy-%20Python%20Core%20and%20Advanced">Udemy: Python Core and Advanced</a></li>
+							  <li>Linux</li>
+							  <li>Unix</li>	
+							  <li>Windows</li>
 							</ul>
 						</li>
 					</ul>	
