--- a/index.html
+++ b/index.html
@@ -284,18 +284,19 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
           <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
             <div class="portfolio-item wow fadeInUp">
               <a class="portfolio-popup">
-                <img src="img/portfolio/4.jpg" alt="">
+                <img src="img/portfolio/6.jpg" alt="">
                 <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Internet of Things (IoT)</h2></div>
+                  <div class="portfolio-info"><h2 class="wow fadeInUp">Software</h2></div>
 					<p class="description"> </p>
 					<ul>
 						<li>Courses
 							<ul>
-							  <li><a href="https://github.com/srishtis/IoT-Coursework/blob/master/Coursera%20PF59B3BRM3P7.pdf">Coursera: Introduction to the Internet of Things and Embedded Systems </a></li>	
-							  <li><a href="https://github.com/srishtis/IoT-Coursework/blob/master/Coursera%20KUR4L7LARWAZ.pdf">Coursera: Software Architecture for the Internet of Things </a></li>
-							  <li><a href="https://github.com/srishtis/IoT-Coursework/blob/master/Coursera%202PLDTCP5WB59.pdf">Coursera: Cybersecurity and the Internet of Things</a></li>	
-							  <li><a href="https://github.com/srishtis/IoT-Coursework/tree/master/OpenSAP-Imagine%20IoT">openSAP: Imagine IoT</a></li>	
-							  <li><a href="https://www.edx.org/course/enabling-technologies-for-data-science-and-analytics-the-internet-of-things">edX: Enabling Technologies for Data Science and Analytics: The Internet of Things (audited the course)</a></li>		
+							  <li>Office Excel</li>	
+							  <li>Audacity</li>
+							  <li>Adobe Lightroom and Photoshop</li>
+							  <li>Pinnacle</li>
+							  	
+							 		
 							</ul>
 						</li>
 					</ul>
@@ -304,85 +305,8 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
             </div>
           </div>
 
-          <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
-            <div class="portfolio-item wow fadeInUp">
-              <a class="portfolio-popup">
-                <img src="img/portfolio/5.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">NLP</h2></div>
-					<p class="description"> </p>
-					<ul>
-						<li>Experience
-							<ul>
-							  <li>Text Processing and Mining </li>
-							  <li>Topic Modelling- LDA, STM</li>
-							  <li>TFIDF (term frequency) analysis</li>	
-							</ul>
-						</li>
-					</ul>
-                </div>
-              </a>
-            </div>
-          </div>
 
-          <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
-            <div class="portfolio-item wow fadeInUp">
-              <a class="portfolio-popup">
-                <img src="img/portfolio/6.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Data Visualization</h2></div> 
-				  	<p class="description"> </p>
-					<ul>
-						<li>Experience
-							<ul>
-							  <li>RShiny dashboard to create a pricing decision board for automotive parts</li>
-							  <li>VBA tool for automating weekly supply chain report generation</li>	
-							</ul>
-						</li>
-					</ul>
-                </div>
-              </a>
-            </div>
-          </div>
 
-          <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
-            <div class="portfolio-item wow fadeInUp">
-              <a class="portfolio-popup">
-                <img src="img/portfolio/7.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Data Engineering</h2></div>
-				  <p class="description"> </p>
-					<ul>
-						<li>Experience
-							<ul>
-							  <li>Good Experience with SQL (Oracle SQL, Teradata) </li>
-							  <li>Data Extraction- using Web Scraping script in Python </li>	
-							</ul>
-						</li>
-					</ul>	
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
-            <div class="portfolio-item wow fadeInUp">
-              <a class="portfolio-popup">
-                <img src="img/portfolio/8.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Blockchain</h2></div>
-					<p class="description"> </p>
-					<ul>
-						<li> Courses
-							<ul>
-							  <li><a href="https://onlinecourses.nptel.ac.in/noc18_cs47/preview">NPTEL: Blockchain Architecture Design and Use Cases (Results awaited) </a></li>
-							</ul>
-						</li>
-					</ul>
-                </div>
-              </a>
-            </div>
-          </div>
 
         </div>
 
