--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
                   <div class="portfolio-info"><h2 class="wow fadeInUp">Programming</h2></div>
 				    <p class="description"> </p>
 					<ul>
-						<li>Experience
+						<li>Language
 							<ul>
 							  <li><a href="#projects"> Python </a></li>  
 							  <li><a href="#projects"> Matlab </a></li>
@@ -280,6 +280,32 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
               </a>
             </div>
           </div>
+		
+		<div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
+            <div class="portfolio-item wow fadeInUp">
+              <a class="portfolio-popup">
+                <img src="img/portfolio/2.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="portfolio-info"><h2 class="wow fadeInUp">Academics</h2></div>
+				  <p class="description"> </p>
+					<ul>
+						<li>Courses
+							<ul>
+							  <li>Digital and Statistical Signal Processing</li>
+							  <li>Pattern Recognition and Machine Learning in Signal Processing</li>
+							  <li>Digital and Analog Communication, Mobile Communication, 5G Communication </li>
+							  <li>Body Area Communication and Auditory Models</li>
+							  <li>Digital and Analog Electronics</li>
+							  <li>Signal Analysis, Signal and System</li>
+							  <li>Music Processing Analysis and Synthesis</li>
+							  <li>Control System and Computer Architecture</li>
+							</ul>
+						</li>
+					</ul>	
+                </div>
+              </a>
+            </div>
+          </div>
 
           <div class="col-xs-3 col-sm-3 col-lg-3 col-md-3">
             <div class="portfolio-item wow fadeInUp">
@@ -289,7 +315,7 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
                   <div class="portfolio-info"><h2 class="wow fadeInUp">Software</h2></div>
 					<p class="description"> </p>
 					<ul>
-						<li>Courses
+						<li>tools
 							<ul>
 							  <li>Office Excel</li>	
 							  <li>Audacity</li>
