--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ talk detector using Magnitude Squared Coherence(MSC) to extract the local speech
 		<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2018.Pdf"> He is quick to learn new tasks. Within a short time, he was very
+                 <a href="https://github.com/Shetu1994/photography/blob/master/assets/ref/Ref.%20Shetu%20Signed.pdf"> He is quick to learn new tasks. Within a short time, he was very
 successful in applying the acquired professional knowledge to his work with high degree of dedication at all times We were always very satisfied with the results of his work.</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
@@ -366,7 +366,7 @@ successful in applying the acquired professional knowledge to his work with high
 			<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/spot%20award_2016.pdf">Mr.Shetu impressed us with his expertise in the field of deep neural networks that was valuable to the entire team. He was a dedicated internee who has always accomplished his assignments with utmost commitment. </a>
+                 <a href="https://github.com/Shetu1994/photography/blob/master/assets/ref/Reference1_Shetu.pdf">Mr.Shetu impressed us with his expertise in the field of deep neural networks that was valuable to the entire team. He was a dedicated internee who has always accomplished his assignments with utmost commitment. </a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
@@ -379,7 +379,7 @@ successful in applying the acquired professional knowledge to his work with high
 			<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                 <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/Spot%20Award%202018_2.Pdf">Mr. Shetu has varied expertise in MATLAB and Python, which he successfully applied in practice.
+                 <a href="https://github.com/Shetu1994/photography/blob/master/assets/ref/Reference2_Shetu.pdf">Mr. Shetu has varied expertise in MATLAB and Python, which he successfully applied in practice.
 		      His work was characterized by high reliability and displayed a high level of responsibility</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
@@ -391,7 +391,7 @@ successful in applying the acquired professional knowledge to his work with high
 			<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/Spot%20Award%202018_2.Pdf">His quality of relaizing and analyzing a topic is impressive. I believe he has a very good potential to pursue his career to doctorate level.</a>
+                <a href="https://github.com/Shetu1994/photography/blob/master/assets/ref/Ref_Mahanty.pdf">His quality of relaizing and analyzing a topic is impressive. I believe he has a very good potential to pursue his career to doctorate level.</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
@@ -402,7 +402,7 @@ successful in applying the acquired professional knowledge to his work with high
 		<div class="testimonial-item">
               <p>
                 <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                <a href="https://github.com/srishtis/Awards-and-Recognitions/blob/master/Spot%20Award%202018_2.Pdf">He stood out among his peers for his egarness to engage in the process of learning and discovery.</a>
+                <a href="https://github.com/Shetu1994/photography/blob/master/assets/ref/Ref_Niranjan.pdf">He stood out among his peers for his egarness to engage in the process of learning and discovery.</a>
                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
               </p>
               <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
