--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
   <title>Shrishti Saha Shetu </title>
+  <meta name="google-site-verification" content="7g5aUqTC_MUKMSWe_4p_slpVz9ls3HERM67tAVytzGc" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
