--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h5>A recent master graduate focusing on machine learning, audio and multimedia signal processing, with adequate programming, and technical skills,
-	      dedicated to leverage organizational, academic and research skills to support the development of new technology.</h5>
+      <h5>I am a recent master graduate focusing on machine learning, audio, and multimedia signal processing, with adequate programming, and technical skills.
+	      My professional ambitions are dedicated to leveraging organizational, academic, and research skills to support the development of new technology.</h5>
       <div>
         <a href="#about" class="btn-get-started scrollto">More about Me</a>
         <a href="#projects" class="btn-projects scrollto">My Projects</a>
@@ -448,11 +448,9 @@ mathematical knowledge, which he applies efficiently to problem solving.
               <div class="details">
                 <h4>Coursework</h4>
 				  <ul>
-					  <li><a href="#">Coursera: Introduction to Recommender Systems: Non-Personalized and Content-Based</a></li>	
-					  <li><a href="#">Coursera: Data Science in Stratified Healthcare and Precision Medicine </a></li>
-					  <li><a href="#">Coursera: Materials Data Sciences and Informatics</a></li>	
+					  <li><a href="https://www.coursera.org/learn/introduction-iot-boards/home/welcome">Introduction and Programming with IoT Boards</a></li>	
+					  <li><a href="#">Coursera: Data Science in Stratified Healthcare and Precision Medicine </a></li>	
 					  <li><a href="#">Coursera: Social Media Data Analytics</a></li>	
-					  <li><a href="#">Coursera: Developing Data Products</a></li>	
 					</ul>
               </div>
             </div>
@@ -464,9 +462,9 @@ mathematical knowledge, which he applies efficiently to problem solving.
               <div class="details">
                 <h4>Projects</h4>
 					<ul>
-					  <li><a href="#">Kaggle: Building a Python-based book recommendation engine using Associative Rule-based learning using Goodreads dataset</a></li>	
-					  <li><a href="#">At Mu Sigma: Working with the Innovation and Development (I&amp;D) team to develop a model-operationalization and deployment framework</a></li>	
-					  <li><a href="#">Article: Writing a series of articles covering the various mathematical tests and techniques for frequency analysis, correlational analysis and group comparisons</a></li>		
+					  <li>Realtime speech denoising for streaming systems, IoT devices and hearing aids</li>	
+					  <li>Online audio-visual speech enhancement</li>	
+					  <li>Personal Project:Improving the implementation of Deep-Channel uses deep neural networks to detect single-molecule events from patch-clamp data</li>		
 					</ul>
               </div>
             </div>
