--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li><a href="#about">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
 <!--           <li><a href="#sk_courses">Courses</a></li> -->
-          <li><a href="#skills">Skills</a></li>
+          <li><a href="#sk_courses">Skills</a></li>
 	  <li><a href="https://shetu1994.github.io/photography/">Photography</a></li>
 <!--           <li class="menu-has-children"><a href="">Articles</a>
             <ul>
@@ -151,7 +151,7 @@
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
-              <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Supression</a></h4>
+              <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Suppression</a></h4>
               <p class="description">In this project we present a novel deep learning method to suppress any kind of noises present in a speech signal. 
 		      The Deep learning model used for this project use a covulational recurrent neural network and the model was trained with 500 hours data provided by
 		      <a href="https://dns-challenge.azurewebsites.net/">Microsoft DNS challenge</a>. Visit the project page for more details and listen to the enhanced audio samples.</p>
