--- a/index.html
+++ b/index.html
@@ -172,13 +172,18 @@
         <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
-              <h4 class="title"><a href=https://github.com/Shetu1994/Acoustic-Echo-Cancelation>Acoustic Echo Cancellation with Double-Talk Detection</a></h4>
-              <p class="description">The need for acoustic echo cancellation arises whenever a loud speaker and a microphone are placed
-together in nearby vicinity of each other and as a result the signals radiated by the loud speaker and its
-reflections are picked up by the microphone. As a result, the electroacoustic circuit may become unstable
-and produce undesirable howling. So to solve this problem, in this project we use the regularized Normalized Least Mean Square(NLMS) algorithm to generate the
-coefficients of the adaptive filter and to have a control over the filter adaption we couple it with a double
-talk detector using Magnitude Squared Coherence(MSC) to extract the local speech signal. </p>
+              <h4 class="title"><a href=https://github.com/Shetu1994/Wirless-Resource-Management>Overfitting and Regularization for Wireless Resource Management.</a></h4>
+              <p class="description">In this work, we address both the theoretical and practical aspects of overfitting and regularization with applications to wireless resource management. 
+		      We first discover the theoretical reasoning of overfitting and how regularization helps and then on implementation side we show the effects of regularization on a practical DNN-based approximatin</p>
+            </div>
+          </div>
+		
+	<div class="col-lg-6">
+            <div class="box wow fadeInLeft">
+              <div class="icon"><i class="fa fa-automobile"></i></div>
+              <h4 class="title"><a href=https://github.com/Shetu1994/Lanes-Detection-Autonomus-Driving-PyTorch>Lanes Detection for Autonomus Driving</a></h4>
+              <p class="description">The difficulty with the road-lane markings is that there is no labeled dataset of them and creating such dataset would cost millions of dollars.
+		      In this project, we solved this problem by creating a dataset of simulated images and then intermixed with a dataset of real images that contain no road.</p>
             </div>
           </div>
 				
