--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
 		      <a href="https://dns-challenge.azurewebsites.net/">Microsoft DNS challenge</a>. Visit the project page for more details and listen to the enhanced audio samples.</p>
             </div>
           </div>
+	
+	<div class="col-lg-6">
+            <div class="box wow fadeInLeft">
+              <div class="icon"><i class="fa fa-signal"></i></div>
+              <h4 class="title"><a href="https://shetu1994.github.io/AV-Speech/">An Empirical Study of Visual Features for Deep Learning based Audio-Visual Speech Enhancement</a></h4>
+              <p class="description">This project was part of master thesis work. In this project we reimplemented the AV speech separation model presented <a href="https://looking-to-listen.github.io/">Google Looking to Listen Project</a> . 
+		      Further we also propose a raw lip images based AV speech enhancement model and compare the result with Google model. This project also cover a study of other visual features, such as, Lip Embedding and also the the effect of visual features on speech denoising tasks.
+		       Visit the project page for more details and listen to the enhanced audio samples.</p>
+            </div>
+          </div>
 		
 
         <div class="col-lg-6">
