--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
               <h4 class="title"><a href="https://shetu1994.github.io/AV-Speech/">An Empirical Study of Visual Features for Deep Learning based Audio-Visual Speech Enhancement</a></h4>
-              <p class="description">This project was part of master thesis work. In this project we reimplemented the AV speech separation model presented <a href="https://looking-to-listen.github.io/">Google Looking to Listen Project</a> . 
-		      Further we also propose a raw lip images based AV speech enhancement model and compare the result with Google model. This project also cover a study of other visual features, such as, Lip Embedding and also the the effect of visual features on speech denoising tasks.
-		       Visit the project page for more details and listen to the enhanced audio samples.</p>
+              <p class="description">This project was the part of my master thesis work. In this project we reimplemented the AV speech separation model presented in <a href="https://looking-to-listen.github.io/"> Google Looking to Listen Project</a> . 
+		      Furthermore, we also proposed a raw lip images based AV speech enhancement model and compared the results with Google model. This project also covers a study of other visual features, such as, lip embedding and also the the effect of visual features on speech denoising tasks.
+		       Visit the project page for more details and listen to the enhanced audio-visual samples.</p>
             </div>
           </div>
 		
@@ -175,6 +175,18 @@
               <h4 class="title"><a href=https://github.com/Shetu1994/Lanes-Detection-Autonomus-Driving-PyTorch>Lanes Detection for Autonomus Driving</a></h4>
               <p class="description">The difficulty with the road-lane markings is that there is no labeled dataset of them and creating such dataset would cost millions of dollars.
 		      In this project, we solved this problem by creating a dataset of simulated images and then intermixed with a dataset of real images that contain no road.</p>
+            </div>
+          </div>
+		
+	<div class="col-lg-6">
+            <div class="box wow fadeInLeft">
+              <div class="icon"><i class="fa fa-automobile"></i></div>
+              <h4 class="title"><a href=https://github.com/Shetu1994/Acoustic-Echo-Cancelation>Acoustic Echo Cancellation with Double-Talk Detection</a></h4>
+              <p class="description">The need for acoustic echo cancellation arises whenever a loud speaker and a microphone are placed
+together in nearby vicinity of each other and as a result the electroacoustic circuit may become unstable
+and produce undesirable howling. So to solve this problem, in this project we use the regularized Normalized LeastMean Square(NLMS) algorithmto generate the
+coefficients of the adaptive filter and to have a control over the filter adaption we couple it with a double
+talk detector usingMagnitude Squared Coherence(MSC) to extract the local speech signal.</p>
             </div>
           </div>
 			
@@ -185,15 +197,6 @@
               <h4 class="title"><a href=https://github.com/Shetu1994/Wirless-Resource-Management>Overfitting and Regularization for Wireless Resource Management.</a></h4>
               <p class="description">In this work, we address both the theoretical and practical aspects of overfitting and regularization with applications to wireless resource management. 
 		      We first discover the theoretical reasoning of overfitting and how regularization helps and then on implementation side we show the effects of regularization on a practical DNN-based approximatin</p>
-            </div>
-          </div>
-		
-	<div class="col-lg-6">
-            <div class="box wow fadeInLeft">
-              <div class="icon"><i class="fa fa-automobile"></i></div>
-              <h4 class="title"><a href=https://github.com/Shetu1994/Lanes-Detection-Autonomus-Driving-PyTorch>Lanes Detection for Autonomus Driving</a></h4>
-              <p class="description">The difficulty with the road-lane markings is that there is no labeled dataset of them and creating such dataset would cost millions of dollars.
-		      In this project, we solved this problem by creating a dataset of simulated images and then intermixed with a dataset of real images that contain no road.</p>
             </div>
           </div>
 				
@@ -332,7 +335,7 @@
                   <div class="portfolio-info"><h2 class="wow fadeInUp">Software</h2></div>
 					<p class="description"> </p>
 					<ul>
-						<li>tools
+						<li>Tools
 							<ul>
 							  <li>Office Excel</li>	
 							  <li>Audacity</li>
