--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
 <!--           <li><a href="#sk_courses">Courses</a></li> -->
           <li><a href="#sk_courses">Skills</a></li>
 	  <li><a href="https://shetu1994.github.io/photography/">Photography</a></li>
-<!--           <li class="menu-has-children"><a href="">Articles</a>
+	 <li><a href="https://shetu1994.github.io/Blog/">Blog</a></li>
+<!--           <li class="menu-has-children"><a href="https://shetu1994.github.io/Blog/">Articles</a>
             <ul>
               <li><a href="https://www.yaabot.com/author/srishti-saha/">Yaabot (Technology)</a></li>
               <li><a href="https://blog.datahut.co/author/srishtisaha/">Datahut (Data Sciences and Analytics)</a></li>
               <li><a href="https://medium.com/@srishtisaha">Medium (Personal work)</a></li>
             </ul>
-          </li> -->
+          </li> --> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
