--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
             </div>
           </div>
 		
+		
+	<div class="col-lg-6">
+            <div class="box wow fadeInLeft">
+              <div class="icon"><i class="fa fa-signal"></i></div>
+              <h4 class="title"><a href="https://shetu1994.github.io/Reverberation-Time-Estimation/">Blind Estimation of the Subband Reverberation Time</a></h4>
+              <p class="description">The research work for this project was done at Multimedia Communication and Signal Processing department at FAU Erlangen as a part of my research internship. In this project, we studied many novel approaches for subband T60s estimation. 
+		      We also proposed two diffrent methods for blind subband and fullband T60 estimation. Please visit the projcet page for more details.</p>
+            </div>
+          </div>
+		
 
         <div class="col-lg-6">
             <div class="box wow fadeInLeft">
