--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
               <h4 class="title"><a href="https://shetu1994.github.io/extent/">Deep Learning Based Noise Suppression</a></h4>
-              <p class="description">In this project we present a novel deep learning method to suppress any kind of noises present in a speech signal. 
+              <p class="description" align='left'>In this project we present a novel deep learning method to suppress any kind of noises present in a speech signal. 
 		      The Deep learning model used for this project use a covulational recurrent neural network and the model was trained with 500 hours data provided by
 		      <a href="https://dns-challenge.azurewebsites.net/">Microsoft DNS challenge</a>. Visit the project page for more details and listen to the enhanced audio samples.</p>
             </div>
@@ -163,7 +163,7 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
               <h4 class="title"><a href="https://shetu1994.github.io/AV-Speech/">An Empirical Study of Visual Features for Deep Learning based Audio-Visual Speech Enhancement</a></h4>
-              <p class="description">This project was the part of my master thesis work. In this project we reimplemented the AV speech separation model presented in <a href="https://looking-to-listen.github.io/"> Google Looking to Listen Project</a> . 
+              <p class="description" align='left'>This project was the part of my master thesis work. In this project we reimplemented the AV speech separation model presented in <a href="https://looking-to-listen.github.io/"> Google Looking to Listen Project</a> . 
 		      Furthermore, we also proposed a raw lip images based AV speech enhancement model and compared the results with Google model. This project also covers a study of other visual features, such as, lip embedding and also the the effect of visual features on speech denoising tasks.
 		       Visit the project page for more details and listen to the enhanced audio-visual samples.</p>
             </div>
@@ -174,7 +174,7 @@
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-signal"></i></div>
               <h4 class="title"><a href="https://shetu1994.github.io/Reverberation-Time-Estimation/">Blind Estimation of the Subband Reverberation Time</a></h4>
-              <p class="description">The research work for this project was done at Multimedia Communication and Signal Processing department at FAU Erlangen as a part of my research internship. In this project, we studied many novel approaches for subband T60s estimation. 
+              <p class="description" align='left'>The research work for this project was done at Multimedia Communication and Signal Processing department at FAU Erlangen as a part of my research internship. In this project, we studied many novel approaches for subband T60s estimation. 
 		      We also proposed two diffrent methods for blind subband and fullband T60 estimation. Please visit the projcet page for more details.</p>
             </div>
           </div>
